--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,10 @@ dependencies {
      //Glide Transformations Dependency injections
      implementation "jp.wasabeef:glide-transformations:4.0.1"
 
+//tests
 
-
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 }
