--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,14 @@ buildscript {
 
     ext{
         version_android_gradle_plugin = '3.6.2'
-        version_core = '1.2.0'
+        version_core = '1.3.0'
         version_constraint_layout = "1.1.3"
         version_glide = "4.11.0"
         version_kotlin = '1.3.72'
         version_kotlin_coroutines = "1.3.3"
         version_lifecycle_extensions = '2.2.0'
         version_moshi = '1.9.2'
-        version_navigation = '2.2.2'
+        version_navigation = '2.3.0-beta01'
         version_retrofit = "2.8.1"
         version_retrofit_coroutines_adapter = "0.9.2"
 
@@ -27,9 +27,9 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:7.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
-        classpath  "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-alpha06"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
