--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
-#Sun Apr 12 17:01:32 EAT 2020
+#Wed Nov 11 17:32:22 EAT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-android.databinding.enableV2=false
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
+android.databinding.enableV2=false
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.0.2-bin.zip
