--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,14 @@ buildscript {
 
     ext{
         version_android_gradle_plugin = '3.6.2'
-        version_core = '1.3.0'
+        version_core = '1.6.0'
         version_constraint_layout = "1.1.3"
         version_glide = "4.11.0"
         version_kotlin = '1.3.72'
         version_kotlin_coroutines = "1.3.3"
         version_lifecycle_extensions = '2.2.0'
         version_moshi = '1.9.2'
-        version_navigation = '2.3.0-beta01'
+        version_navigation = '2.4.0-alpha10'
         version_retrofit = "2.8.1"
         version_retrofit_coroutines_adapter = "0.9.2"
 
